--- a/a1/client/package.json
+++ b/a1/client/package.json
@@ -19,10 +19,12 @@
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "serve": "^13.0.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
